2008-11-06 version 0.5.2 toni  <tony@irational.org>

	* working init script added, README expanded with install and use
	instructions
